refactor all app for exceptions and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/products
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+server.error.include-stacktrace=NEVER
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-server.error.include-stacktrace=never
+
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
